<resources>
    <string name="app_name">Shows</string>
    <string name="in_order_to_continue_please_log_in">In order to continue please log in.</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="write_a_review">Write a review</string>
    <string name="reviews">Reviews</string>
    <string name="no_reviews_yet">No reviews yet.</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="shows">Shows</string>
    <string name="your_shows_are_not_showing_get_it">Your shows are not showing. Get it?</string>
    <string name="remember_me">Remember me</string>
    <string name="change_profile_photo">Change profile photo</string>
    <string name="logout">Logout</string>
    <string name="submit">Submit</string>
    <string name="comment">Comment</string>
    <string name='no_permission' formatted='false'>Please check your permissions in Settings.</string>
    <string name='settings' formatted='false'>Settings</string>
    <string name="register">Register</string>
    <string name="repeat_password">Repeat password</string>
</resources>
