<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:ignore="ContentDescription,Autofill"
    tools:context=".ui.LoginFragment"
    android:background="#3D1D72">

    <ImageView
        android:id="@+id/top_left_illustration"
        android:src="@drawable/top_left_illustration"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        />

    <ImageView
        android:id="@+id/top_right_illustration"
        android:src="@drawable/top_right_illustration"
        android:layout_width="200dp"
        android:layout_height="265dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <ImageView
        android:id="@+id/logo_horizontal_white"
        android:src="@drawable/logo_horizontal_white"
        android:layout_width="34dp"
        android:layout_height="38dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="131dp"
        android:layout_marginStart="56dp"
        />

    <ImageView
        android:id="@+id/showsTitle"
        android:layout_width="104dp"
        android:layout_height="41dp"
        android:src="@drawable/shows_title"
        app:layout_constraintStart_toEndOf="@id/logo_horizontal_white"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="128dp"
        android:layout_marginStart="19dp"
        />

    <TextView
        android:id="@+id/loginTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginTop="250dp"
        android:layout_marginBottom="430dp"
        android:layout_marginStart="24dp"
        android:text="@string/login"
        android:textColor="@color/white"
        android:textSize="34sp"
        />

    <TextView
        android:id="@+id/bodyText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/in_order_to_continue_please_log_in"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/loginTitle"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        />


    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:id="@+id/emailInput"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:theme="@style/CustomTextInputLayout_overlay"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/bodyText"
        android:layout_marginTop="27dp"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="25dp"
        android:hint="@string/email"
        android:textColorHint="@color/white"
        app:boxStrokeWidth="1dp"
        app:boxStrokeWidthFocused="2dp"
        app:boxStrokeColor="@drawable/custom_box_stroke"
        app:errorEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTextEmail"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textColor="@color/white"
            android:inputType="textEmailAddress">

        </com.google.android.material.textfield.TextInputEditText>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:id="@+id/passwordInput"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:theme="@style/CustomTextInputLayout_overlay"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/emailInput"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="25dp"
        android:hint="@string/password"
        android:textColorHint="@color/white"
        app:boxStrokeWidth="1dp"
        app:boxStrokeWidthFocused="2dp"
        app:boxStrokeColor="@drawable/custom_box_stroke"
        app:passwordToggleEnabled="true"
        app:passwordToggleTint="@color/white"
        app:errorEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTextPassword"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textColor="@color/white"
            android:inputType="textPassword">

        </com.google.android.material.textfield.TextInputEditText>

    </com.google.android.material.textfield.TextInputLayout>

    <CheckBox
        android:id="@+id/remember_me_checkbox"
        app:layout_constraintTop_toBottomOf="@id/passwordInput"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:buttonTint="@color/white"
        tools:checked="true"
        android:text="@string/remember_me"
        android:textColor="@color/white">

    </CheckBox>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/registerButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginHorizontal="26dp"
        android:layout_marginBottom="16dp"
        android:text="@string/register"
        android:textAllCaps="false"
        android:backgroundTint="#3D1D72"
        style="?android:attr/borderlessButtonStyle"
        />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/loginButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@id/registerButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginHorizontal="26dp"
        android:layout_marginBottom="16dp"
        android:text="@string/login"
        android:textColor="@color/black"
        android:textAllCaps="false"
        android:background="@drawable/custom_button"
        android:enabled="false"
        />

</androidx.constraintlayout.widget.ConstraintLayout>